--- a/definition/sim/my_laser_config.yaml
+++ b/definition/sim/my_laser_config.yaml
@@ -1,7 +1,6 @@
 scan_filter_chain:
 - name: range
-  type: LaserScanRangeFilter
+  type: laser_filters/LaserScanRangeFilter
   params:
     lower_threshold: 0.25
     upper_threshold: .inf
-
