--- a/nav_params/local_costmap_params.yaml
+++ b/nav_params/local_costmap_params.yaml
@@ -12,3 +12,4 @@ local_costmap:
    plugins:
     - {name: obstacle_layer_local,      type: "costmap_2d::VoxelLayer"}
     - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
+    - {name: proxemic_layer, type: "social_navigation_layers::ProxemicLayer"}
