--- a/nav_params/costmap_common_params.yaml
+++ b/nav_params/costmap_common_params.yaml
@@ -23,7 +23,7 @@ obstacle_layer:
 
   scan:
     data_type: LaserScan
-    topic: /scan_filtered
+    topic: /scan_multi
     marking: false
     clearing: false
     min_obstacle_height: 0.1
@@ -47,7 +47,7 @@ obstacle_layer_local:
 
   scan_local:
     data_type: LaserScan
-    topic: /scan_filtered
+    topic: /scan_multi
     marking: true
     clearing: true
     min_obstacle_height: 0.1
